# open-claw

./: .codecov.yml  .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  LICENSE  MANIFEST.in  README.md  RELEASE_TEMPLATE.md  app.py  cli.py  config.py  db_init.py  docker-compose.yml  formatters.py  metrics.py  openclaw_client.py  pyproject.toml  render.yaml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ai-propose-fixes.yml  build-and-test.yml  ci.yml  devonn-prod-deploy.yml  devonn-staging-deploy.yml  docker-publish.yml  issue-trigger.yml  publish.yml
agents/: __init__.py  base_agent.py  default_agent.py  email_agent.py  weather_agent.py
agents/devonn/: agent.md  identity.md  memory.md  soul.md  task_list.md
channels/: __init__.py  slack_channel.py  telegram_channel.py  voice_channel.py  web_channel.py
chroma_memory/: chroma.sqlite3
config/: __init__.py  channel_config.yaml  settings.py
delivery/: __init__.py  formatters.py  messenger.py  retry_queue.py
docs/: API.md  API_CLIENT.md  ARCHITECTURE.md  CLI_GUIDE.md  DEPLOYMENT.md  EXAMPLES.md  INSTALLATION.md  INSTALL_METHODS.md  PRODUCTION_DEPLOYMENT.md  QUICKSTART.md  TROUBLESHOOTING.md  UPDATE_MONITOR.md  architecture_v4.md  multi_channel_system.md  runbook.md
examples/: cicd_pipeline.py  fortress_workflow.py  interactive_demo.py  multi_agent_workflow.py  simple_agent.py
gateway/: __init__.py  dispatcher.py  router.py
k8s/base/: devonn-backend.yaml  devonn-frontend.yaml  envoy-proxy.yaml  ingress.yaml
loggers/: __init__.py  logger.py  metrics.py
memory/: USER.md  __init__.py  context_manager.py  embeddings.py  session_store.py
openclaw/: __init__.py  config.py
openclaw-v2/: .claudeignore  .env.dev
openclaw-v2/agents/: dev_agent.py
openclaw-v2/devtools/: aliases.sh  setup_claude.sh  statusline.sh  workflow.md
openclaw/framework/: __init__.py  agent.py  executor.py  memory.py  planner.py  tools.py
openclaw/services/: __init__.py  ai.py  analytics.py  auth.py  comms.py  integrations.py  leads.py  monitoring.py  sapphire.py  search.py  voice.py
orchestration/: __init__.py  cron_scheduler.py  heartbeat.py  multi_agent_orchestrator.py  queue_consumer.py
queues/: __init__.py  redis_queue.py
scripts/: build_docker.sh  build_package.sh  init_db.py  openclaw-monitor.service  openclaw_multi_channel_update.sh  publish_pypi.sh  quick_install.sh  run_docker.sh  run_examples.sh  start_server.py  test_cli.sh  upgrade.sh  verify_docker.sh  verify_install.sh  verify_package.sh
scripts/ai/: README.md  propose_fixes.py  requirements.txt
src/: config.py
src/fortress/: __init__.py  engine.py  models.py  security.py
src/monitoring/: logging_config.py  metrics.py
src/routes/: fortress.py
storage/: __init__.py  base.py  memory.py  mongo.py
tests/: conftest.py  test_api.py  test_fortress.py  test_health.py  test_integrations.py  test_sapphire.py  test_skeleton.py
tools/: __init__.py  base_tool.py  email_tool.py  openai_tool.py
tools/custom_tools/: __init__.py
