[metadata]
name = open-claw
version = 0.1.0
author = DecawDevonn
description = OpenClaw - Agent orchestration and task management platform
url = https://github.com/DecawDevonn/open-claw
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.8
packages = find:
install_requires =
    Flask>=3.0.0
    requests>=2.31.0
    python-dotenv>=1.0.0
    pydantic>=2.0.0
    click>=8.1.0
    colorama>=0.4.6
    tabulate>=0.9.0

[options.entry_points]
console_scripts =
    openclaw = cli:main

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*

[flake8]
max-line-length = 120
exclude = .git,__pycache__,venv,.venv
